--- a/research/trials.ipynb
+++ b/research/trials.ipynb
@@ -78,17 +78,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 1s 903ms/step\n",
+      "1/1 [==============================] - 1s 953ms/step\n",
       "<class 'numpy.ndarray'>\n",
-      "51 Pekinese\n",
-      "0.81679827\n"
+      "116 toy_terrier\n",
+      "0.27899528\n"
      ]
     }
    ],
@@ -101,7 +101,7 @@
     "\n",
     "model = load_model(os.path.join(\"model\", \"inception_model.h5\"))\n",
     "\n",
-    "img_path = \"model_testing/pekinese.jpg\"\n",
+    "img_path = \"model_testing/toy_terrier.jpg\"\n",
     "img = load_img(img_path, target_size=(299,299))\n",
     "img = img_to_array(img)\n",
     "img /= 255.0  # Scale pixel values to between 0 and 1\n",
