--- a/research/trials.ipynb
+++ b/research/trials.ipynb
@@ -19,14 +19,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/media/tinku/Education/iNEURON/DL/Dog-Breed-Classification-end2end/research\n"
+      "/media/tinku/Education/iNEURON/DL/Dog-Breed-Classification-end2end\n"
      ]
     }
    ],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
        "'English_foxhound'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,17 +78,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-04-25 23:19:14.706628: E tensorflow/compiler/xla/stream_executor/cuda/cuda_driver.cc:266] failed call to cuInit: CUDA_ERROR_NO_DEVICE: no CUDA-capable device is detected\n",
+      "2023-04-25 23:19:14.706702: I tensorflow/compiler/xla/stream_executor/cuda/cuda_diagnostics.cc:168] retrieving CUDA diagnostic information for host: tinku-H410M-H-V2\n",
+      "2023-04-25 23:19:14.706713: I tensorflow/compiler/xla/stream_executor/cuda/cuda_diagnostics.cc:175] hostname: tinku-H410M-H-V2\n",
+      "2023-04-25 23:19:14.706856: I tensorflow/compiler/xla/stream_executor/cuda/cuda_diagnostics.cc:199] libcuda reported version is: 530.41.3\n",
+      "2023-04-25 23:19:14.706887: I tensorflow/compiler/xla/stream_executor/cuda/cuda_diagnostics.cc:203] kernel reported version is: 470.182.3\n",
+      "2023-04-25 23:19:14.706895: E tensorflow/compiler/xla/stream_executor/cuda/cuda_diagnostics.cc:312] kernel version 470.182.3 does not match DSO version 530.41.3 -- cannot find working devices in this configuration\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 1s 953ms/step\n",
+      "1/1 [==============================] - 2s 2s/step\n",
       "<class 'numpy.ndarray'>\n",
-      "116 toy_terrier\n",
-      "0.27899528\n"
+      "54 Rhodesian_ridgeback\n",
+      "0.9870652\n"
      ]
     }
    ],
@@ -101,7 +113,7 @@
     "\n",
     "model = load_model(os.path.join(\"model\", \"inception_model.h5\"))\n",
     "\n",
-    "img_path = \"model_testing/toy_terrier.jpg\"\n",
+    "img_path = \"model_testing/Rhodesian_ridgeback.jpg\"\n",
     "img = load_img(img_path, target_size=(299,299))\n",
     "img = img_to_array(img)\n",
     "img /= 255.0  # Scale pixel values to between 0 and 1\n",
@@ -112,6 +124,13 @@
     "print(np.argmax(prediction), breed_names[np.argmax(prediction)])\n",
     "print(np.max(prediction))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
